--- a/main.css
+++ b/main.css
@@ -1,15 +1,16 @@
-.img-container {
-    width: 100%;
-    height: 200px;
-    max-height: 240px;
-    overflow: hidden;
-    margin: 0;
-    position: relative;
+body, html {
+  height: 100%;
 }
 
-.img-container img {
-    position:absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    max-width: 100%;
+.bg {
+  /* The image used */
+  background-image: url("cocoa-logo.png");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
