--- a/mvp.css
+++ b/mvp.css
@@ -73,7 +73,7 @@ header,
 main {
     margin: 0 auto;
     max-width: var(--width-content);
-    padding: 3rem 1rem;
+    /* padding: 3rem 1rem; */
 }
 
 hr {
@@ -147,10 +147,10 @@ section header {
 /* Nav */
 nav {
     align-items: center;
-    display: flex;
+    /* display: flex; */
     font-weight: bold;
     justify-content: space-between;
-    margin-bottom: 7rem;
+    /* margin-bottom: 7rem; */
 }
 
 nav ul {
