added photo style

--- a/mvp.css
+++ b/mvp.css
@@ -535,3 +535,10 @@ blockquote footer {
     background-color: var(--color-scrollbar);
     border-radius: 10px;
 }
+
+img#people {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+  }
